--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,26 @@
-h1 {
-    color: gray;
+h1.titleText {
+    color: white;
+    font: 64px Helvetica, bold;
+}
+
+.mainDiv {
+    margin: auto;
+    width: 50%;
+    padding: 100px;
+    text-align: center;
+}
+
+body {
+    background: url("/images/indexBackground.png")
+}
+
+button {
+  background-color: #4CAF50; /* Green */
+  border: white;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 32px;
 }
