--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,11 +16,19 @@ body {
 
 button {
   background-color: #4CAF50; /* Green */
-  border: white;
+  border: 2px solid white;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 32px;
+  border-radius: 6px;
+  transition-duration: 0.4s;
+}
+
+button:hover {
+    background-color: white; /* Green */
+    color: black;
+    border: 2px solid green;
 }
