Allows for uploading of ratings

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,3 +46,23 @@ body {
     color: black;
     border: 2px solid green;
 }
+
+#rateButton {
+  background-color: #4CAF50; /* Green */
+  border: 2px solid white;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin: 12px;
+  border-radius: 6px;
+  transition-duration: 0.4s;
+}
+
+#rateButton:hover {
+    background-color: white; /* Green */
+    color: black;
+    border: 2px solid green;
+}
