--- a/public/css/login.css
+++ b/public/css/login.css
@@ -47,6 +47,21 @@ body {
     border: 4px solid green
 }
 
+.iconButton {
+    border-radius: 50%;
+    background-color: Transparent;
+    border: 2px solid white;
+}
+
+.iconButton:hover {
+    background: rgba(211, 211, 211, 0.4);
+}
+
+.material-icons.icon {
+    font-size: 32px;
+    color: white;
+}
+
 a {
     color: white;
     font: 20px Helvetica;
