--- a/public/css/general.css
+++ b/public/css/general.css
@@ -110,3 +110,11 @@ body {
 .logInput:focus {
     border: 4px solid green
 }
+
+.axis {
+    color: white;
+}
+
+.grid {
+    color: rgba(211, 211, 211, 0.8);
+}
