--- a/public/css/general.css
+++ b/public/css/general.css
@@ -58,6 +58,26 @@ body {
     border: 2px solid green;
 }
 
+.fileButton {
+    background-color: #4CAF50; /* Green */
+    border: 2px solid white;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 6px;
+    border-radius: 6px;
+    transition-duration: 0.4s;
+}
+
+.fileButton:hover {
+    background-color: white; /* Green */
+    color: black;
+    border: 2px solid green;
+}
+
 .iconButton {
     border-radius: 50%;
     background-color: Transparent;
