--- a/public/css/general.css
+++ b/public/css/general.css
@@ -5,6 +5,11 @@ h1 {
     padding: 5px;
 }
 
+h1.title {
+    font: 82px Helvetica;
+    margin: 30px;
+}
+
 h2 {
     color: white;
     font: 32px Helvetica;
@@ -15,13 +20,20 @@ h3 {
     font : 24px Helvetica;
 }
 
+p {
+    color: #6B6E70;
+    font: 18px Helvetica
+}
+
 a {
     color: white;
     font: 20px Helvetica;
 }
 
-body {
-    background: url("/images/indexBackground.png")
+html  {
+    background: url("/images/triangular.png");
+    background-size: cover;
+    background-color: #222629;
 }
 
 .centeredDiv {
@@ -40,6 +52,17 @@ body {
     margin: auto;
     width: 75%;
     text-align: center;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  border: 1px solid white;
+  background-color: rgba(128, 128, 128, 0.3);
+  color: white;
+  text-align: center;
 }
 
 .scrollDiv {
@@ -63,7 +86,7 @@ body {
 }
 
 .generalButton {
-    background-color: #4CAF50; /* Green */
+    background-color: #86C232; /* Green */
     border: 2px solid white;
     color: white;
     padding: 15px 32px;
@@ -79,11 +102,11 @@ body {
 .generalButton:hover {
     background-color: white; /* Green */
     color: black;
-    border: 2px solid green;
+    border: 2px solid #61892F;
 }
 
 .smallButton {
-    background-color: #4CAF50; /* Green */
+    background-color: #86C232; /* Green */
     border: 2px solid white;
     color: white;
     padding: 5px 10px;
@@ -99,13 +122,14 @@ body {
 .smallButton:hover {
     background-color: white; /* Green */
     color: black;
-    border: 2px solid green;
+    border: 2px solid #61892F;
 }
 
 .iconButton {
     border-radius: 50%;
     background-color: Transparent;
     border: 2px solid white;
+    margin: 4px;
 }
 
 .iconButton:hover {
@@ -129,7 +153,7 @@ body {
 .roundButtons:hover {
     background-color: white !important; /* Green */
     color: black;
-    border: 2px solid green;
+    border: 2px solid #61892F;
 }
 
 
@@ -152,7 +176,7 @@ body {
 }
 
 .logInput:focus {
-    border: 4px solid green
+    border: 4px solid #61892F
 }
 
 .axis {
